# Defect-Detection

Defect_Detection_CNN_v_1_0_4/: MyNet.py  README.md  input_data.py  main  run.sh  test_on_pb.py  test_on_tflite.py
Defect_Detection_CNN_v_1_0_4/Cpp_Py/: CMakeLists.txt  Interface.cpp  Interface.h  MyPredictObj.cpp  MyPredictObj.h  README.txt  main.cpp
Defect_Detection_CNN_v_1_0_4/Cpp_files/: CMakeLists.txt  Makefile  README.md  edgetpu.h  main.cpp  model_units.cpp  model_units.h
Defect_Detection_CNN_v_1_0_4/eval_logs/: check.py  convert.py  mymodel2.tflite  pb2tflite.sh  run.sh
Defect_Detection_CNN_v_1_0_4/train_logs/: .convert.py.swp  check.py  check.sh  convert.py  pb2tflite.sh  run.sh
二分类/: dataset.py  train.py
猫狗大战/: main.py  test.py  分类放置.py  图片存储.py
